# MAI-OOP-Lab4-2025

./: .gitignore  README.md
lab_4/: CMakeLists.txt  main.cpp
lab_4/include/: array.h  figure.h  hexagon.h  pentagon.h  point.h  rhombus.h  romb.h
lab_4/test/: test04.cpp
